Added my github handle

--- a/custom_components/dobiss/manifest.json
+++ b/custom_components/dobiss/manifest.json
@@ -3,6 +3,6 @@
   "name": "Dobiss Domotics",
   "documentation": "https://dobiss.be",
   "dependencies": [],
-  "codeowners": [],
+  "codeowners": ["@OpenJeDi"],
   "requirements": []
 }
