Moved to config flow with coordinator in __init__.py

--- a/custom_components/dobiss/manifest.json
+++ b/custom_components/dobiss/manifest.json
@@ -4,5 +4,6 @@
   "documentation": "https://dobiss.be",
   "dependencies": [],
   "codeowners": ["@OpenJeDi"],
-  "requirements": []
+  "requirements": [],
+  "config_flow": true
 }
