--- a/configuration.yaml
+++ b/configuration.yaml
@@ -115,43 +115,11 @@ sensor:
       upcomingsensor: 1
       dutch: 1
 
-
-ffmpeg:
-
-stream:
-
-# Baby Cam
-camera:
-  - platform: mjpeg
-  #- platform: generic
-  #- platform: ffmpeg
-    name: BabyCam
-    still_image_url: http://192.168.1.105/snapshot.jpg?user=admin&pwd=medisana
-    mjpeg_url: http://192.168.1.105/videostream.asf?user=admin&pwd=medisana
-    #stream_source: http://192.168.1.105/videostream.asf?user=admin&pwd=medisana
-    verify_ssl: false
-    username: admin
-    password: medisana
-    authentication: digest
-    # FFMpeg specific
-    #input: "http://192.168.1.105/videostream.asf?user=admin&pwd=medisana"
-    #extra_arguments: '-q:v 1 -r 25 -vf "scale=640:360"'
-
-binary_sensor:
-  - platform: ffmpeg_noise
-    name: BabyNoise
-    input: "http://192.168.1.105/videostream.asf?user=admin&pwd=medisana"
-    #output: TODO audio output
-    extra_arguments: -filter:a highpass=f=300,lowpass=f=2500,volume=volume=2 -codec:a libmp3lame -ar 16000
-    initial_state: false
-    duration: 2
-    reset: 30
-    peak: -32
-
-input_boolean:
-  baby_monitor:
-    name: Baby Monitor
-    initial: off
+# Enable debug logging
+logger:
+  default: info
+  logs:
+    custom_components.dobiss: debug
 
 #####
 # End of custom configuration
