--- a/custom_components/dobiss/manifest.json
+++ b/custom_components/dobiss/manifest.json
@@ -5,5 +5,6 @@
   "dependencies": [],
   "codeowners": ["@OpenJeDi"],
   "requirements": [],
-  "config_flow": true
+  "config_flow": true,
+  "version": "1.0.0"
 }
